test/data/semantic/bad/unary_op_type_mismatch.coy
fn main() -> () {
    let x = ();

    let y = !x;

    ()
}
